<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_all_wrap"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_centerInParent="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BU FleaMarket"
        android:textColor="#000000"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_white_border_wrap"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/username"
            android:padding="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/transparent"
            android:textColor="@color/grey_600"
            android:textSize="16sp"
            android:hint="@string/username_hint"
            android:textColorHint="@color/grey_600"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_white_border_wrap"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/password"
            android:padding="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/transparent"
            android:textColor="@color/grey_600"
            android:textSize="16sp"
            android:hint="@string/password_hint"
            android:textColorHint="@color/grey_600"/>

    </LinearLayout>





    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/selector_bg_login_button"
        android:gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/grey_600"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_party"
        android:textColor="@color/grey_600"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:id="@+id/ll_wechat"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/selector_bg_wechat_button">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/wechat_white"
                android:padding="7dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_qq"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/selector_bg_qq_button"
            android:layout_marginLeft="30dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/qq"
                android:padding="11dp"/>

        </LinearLayout>

    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">
        
        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:background="@drawable/selector_bg_transblack_right"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"/>
        
        
    </RelativeLayout>



</LinearLayout>