<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <include layout="@layout/widget_viewpager_dots" android:id="@+id/RadioGroup"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/llBuy"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_buy_entry"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buy_entry"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSell"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_sell_entry"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sell_entry"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:gravity="center"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPost"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_post_entry">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/post_entry"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:gravity="center"/>



        </LinearLayout>


    </LinearLayout>



</LinearLayout>