<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200">

    <RelativeLayout
        android:id="@+id/rlProfile"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_bg_textview_borderless">

        <com.shinji.fleemarket.Widget.RoundImageView
            android:id="@+id/ivAvatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/profile_photo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"/>

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_arrow_right"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/ivAvatar"
            android:layout_toLeftOf="@id/ivArrow"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sh1nJi"
                android:textSize="18sp"
                android:textColor="@color/grey_800"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_400"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:id="@+id/rlHistory"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/selector_bg_textview_borderless">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/order_history"
            android:textColor="@color/grey_800"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="30dp"/>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/ic_arrow_right"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_400"/>

    <RelativeLayout
        android:id="@+id/rlWishList"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/selector_bg_textview_borderless">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wish_list"
            android:textColor="@color/grey_800"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="30dp"/>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/ic_arrow_right"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_400"/>

    <RelativeLayout
        android:id="@+id/rlSetting"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/selector_bg_textview_borderless">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting"
            android:textColor="@color/grey_800"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="30dp"/>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/ic_arrow_right"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_400"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_400"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:id="@+id/rlLogOut"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/selector_bg_textview_borderless">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/log_out"
            android:textColor="@color/grey_800"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="30dp"/>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/ic_arrow_right"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_400"/>

</LinearLayout>