<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200">

    <include layout="@layout/view_header" android:id="@+id/header"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_white_all_wrap"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical">

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_300" />

            <RelativeLayout
                android:id="@+id/rlRealName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_bg_textview_borderless"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/realName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/real_name"
                    android:textColor="@color/grey_800"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/ivArrow1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:src="@mipmap/ic_arrow_right" />

                <TextView
                    android:id="@+id/tvRealName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Sh1nJi"
                    android:ellipsize="end"
                    android:textColor="@color/grey_700"
                    android:textSize="14sp"
                    android:gravity="center_vertical"
                    android:layout_toLeftOf="@id/ivArrow1"/>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_300" />

            <RelativeLayout
                android:id="@+id/rlPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_bg_textview_borderless"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textColor="@color/grey_800"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/ivArrow2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:src="@mipmap/ic_arrow_right" />

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="931-636-3235"
                    android:ellipsize="end"
                    android:textColor="@color/grey_700"
                    android:textSize="14sp"
                    android:gravity="center_vertical"
                    android:layout_toLeftOf="@id/ivArrow2"/>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_300" />

            <RelativeLayout
                android:id="@+id/rlEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_bg_textview_borderless"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="@color/grey_800"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/ivArrow4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:src="@mipmap/ic_arrow_right" />

                <TextView
                    android:id="@+id/tvPriceRange"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="user@domain.com"
                    android:ellipsize="end"
                    android:textColor="@color/grey_700"
                    android:textSize="14sp"
                    android:gravity="center_vertical"
                    android:layout_toLeftOf="@id/ivArrow4"/>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_300" />

            <RelativeLayout
                android:id="@+id/rlAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_bg_textview_borderless"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/my_address"
                    android:textColor="@color/grey_800"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/ivArrow3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:src="@mipmap/ic_arrow_right" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_300" />





            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_300"
                android:layout_marginBottom="30dp"/>



        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>




</RelativeLayout>